build: remove Crossplatform, Windows and MacOS installers & snap